--- a/resources/css/components/_index.scss
+++ b/resources/css/components/_index.scss
@@ -318,4 +318,8 @@ form {
     font-weight: bold;
     background-color: $midBlue;
 	color: white;
-  }
+}
+.nbrLigne {
+	// align-self: flex-end;
+	color: $darkBlue;
+}
